fixed alignment of images

--- a/scss/portfolio.scss
+++ b/scss/portfolio.scss
@@ -23,6 +23,7 @@
     .portfolio-img {
         flex-direction: row;
         justify-content: space-between;
+        align-items: center;
     }
 }
 
